# hybrid-rag-chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  run.bat  run.ps1
.github/workflows/: ci.yml
.streamlit/: config.toml
data/: golden_set.json
scripts/: eval.py
src/sage/: __init__.py  chat_store.py  config.py  exceptions.py  ingest.py  io_utils.py  loaders.py  logging_config.py  rag_chain.py  retriever.py  ui.py
tests/: conftest.py  test_chat_store.py  test_config.py  test_ingest.py  test_io_utils.py  test_loaders.py
